--- a/style.css
+++ b/style.css
@@ -1,85 +1,150 @@
+/* important note page 3 is above to page 2 */
+
 @font-face {
   font-family: font;
   src: url(./fonts/helvetica-now-text-regular-woff-2-4479bd.ttf);
 }
+
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: font;
 }
-html, body {
-  height:100%;
-  width:100%;
-  padding:0 10px;
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 0 10px;
   background-color: rgb(255, 242, 224);
 }
-.button{
+
+.button {
   padding: 15px 15px;
-    border: 1px solid #8a8a8a89;
-    border-radius: 10px;
+  border: 1px solid #8a8a8a89;
+  border-radius: 10px;
 
-    position: relative;
-    transition: all ease 0.4s;
-    overflow: hidden;
-
+  position: relative;
+  transition: all ease 0.4s;
+  overflow: hidden;
 }
-.button::after{
+
+.button::after {
   position: absolute;
-    content: '';
-    height: 100%;
-    width: 100%;
-    background-color: rgb(8, 124, 163);
-    left: 0;
-    bottom: -100%;
-    border-radius: 50%;
-    transition: all ease 0.4s;
+  content: '';
+  height: 100%;
+  width: 100%;
+  background-color: rgb(8, 124, 163);
+  left: 0;
+  bottom: -100%;
+  border-radius: 50%;
+  transition: all ease 0.4s;
 }
-.button:hover::after{
+
+.button:hover::after {
   bottom: 0;
   border-radius: 0;
 }
-#page1{
+
+#page1 {
   height: 100vh;
   width: 100%;
-
-
 }
-#page1 video{
+
+#page1 video {
   min-height: 100%;
-  width: 100% ;
+  width: 100%;
   object-fit: cover;
+  margin-bottom: 5vh;
 }
-#page1 #head{
-  margin-top: 10vh;
+
+/* moving text */
+#moving-text {
+  white-space: nowrap;
+  overflow-x: auto;
+}
+
+#moving-text h1 {
+  font-size: 9vw;
+  display: inline-block;
+}
+
+#gola {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  background-color: #fe4513;
+  display: inline-block;
+  margin: 1vw 2vw;
+}
+
+.con {
+  white-space: nowrap;
+  display: inline-block;
+  animation-name: move;
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+#moving-text::-webkit-scrollbar {
+  display: none;
+}
+
+@keyframes move {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+/* moving text */
+
+/*  */
+
+/* page 1 ends here */
+
+/* page3 starts here */
+#page3 {
   height: 100vh;
   width: 100%;
-
 }
-#page1 #head img{
-  height:  70vh;
+
+#page3 #head {
+  margin-top: 5vh;
+  height: 100vh;
+  width: 100%;
+}
+
+#page3 #head img {
+  height: 70vh;
   width: 100%;
   object-fit: cover;
   border-bottom-right-radius: 100px;
 }
 
+/*  */
 
-/* page 1 ends here */
-
-
-#page2{
+#page2 {
   height: 100vh;
   width: 100%;
 }
-#page2 .swiper-slide{
+
+#page2 .swiper-slide {
   position: relative;
 }
-#page2 img{
+
+#page2 img {
   position: absolute;
   z-index: 1;
 }
-#page2 .text{
-  position:absolute;
+
+#page2 .text {
+  position: absolute;
   z-index: 1;
   bottom: 5%;
   color: white;
@@ -90,50 +155,3 @@ html, body {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   left: 5%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* page3 starts here */
-#page3{
-  height: 100vh;
-  width: 100%;
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
